[gd_scene load_steps=3 format=3 uid="uid://cp1sxbjk1v7g7"]

[ext_resource type="PackedScene" uid="uid://ccslox2e8c5ge" path="res://laudgame/laud_string.tscn" id="1_j32el"]
[ext_resource type="Script" path="res://laudgame/scripts/laud.gd" id="1_majgd"]

[node name="Laud" type="Node2D"]
script = ExtResource("1_majgd")

[node name="Laud0" parent="." instance=ExtResource("1_j32el")]
position = Vector2(-45, 134)
action = "laud_0"
letter = "d"

[node name="Laud1" parent="." instance=ExtResource("1_j32el")]
position = Vector2(-15, 135)
action = "laud_1"
letter = "f"
sound = "res://laudgame/assets/sounds/Note_2.wav"

[node name="Laud2" parent="." instance=ExtResource("1_j32el")]
position = Vector2(15, 135)
action = "laud_2"
sound = "res://laudgame/assets/sounds/Note_3.wav"

[node name="Laud3" parent="." instance=ExtResource("1_j32el")]
position = Vector2(46, 135)
action = "laud_3"
letter = "j"
sound = "res://laudgame/assets/sounds/Note_4.wav"

[node name="Timer" type="Timer" parent="."]
